syntax = "proto3";

package echomind.public;

option go_package = "echomind/proto/public";

import "google/protobuf/timestamp.proto";
import "common.proto";

// AI Assistant configuration
message Assistant {
  int32 id = 1;
  string name = 2;
  string description = 3;
  optional int32 llm_id = 4;
  string system_prompt = 5;
  string task_prompt = 6;
  repeated string starter_messages = 7;
  bool is_default = 8;
  bool is_visible = 9;
  int32 display_priority = 10;
  optional int32 created_by = 11;
  google.protobuf.Timestamp creation_date = 12;
  google.protobuf.Timestamp last_update = 13;
}

// Request to create a new assistant
message CreateAssistantRequest {
  string name = 1;
  string description = 2;
  optional int32 llm_id = 3;
  string system_prompt = 4;
  string task_prompt = 5;
  repeated string starter_messages = 6;
  bool is_default = 7;
  bool is_visible = 8;
  int32 display_priority = 9;
}

// Request to update an assistant
message UpdateAssistantRequest {
  int32 id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 llm_id = 4;
  optional string system_prompt = 5;
  optional string task_prompt = 6;
  repeated string starter_messages = 7;
  optional bool is_default = 8;
  optional bool is_visible = 9;
  optional int32 display_priority = 10;
}

// Response for GET /assistants
message ListAssistantsRequest {
  echomind.common.PaginationRequest pagination = 1;
  optional bool is_visible = 2;  // Filter by visibility
}

message ListAssistantsResponse {
  repeated Assistant assistants = 1;
  echomind.common.PaginationResponse pagination = 2;
}

// Response for GET /assistants/{id}
message GetAssistantResponse {
  Assistant assistant = 1;
}
