syntax = "proto3";

package echomind.public;

option go_package = "echomind/proto/public";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "common.proto";

// Chat mode
enum ChatMode {
  CHAT_MODE_UNSPECIFIED = 0;
  CHAT_MODE_CHAT = 1;    // Full RAG with LLM
  CHAT_MODE_SEARCH = 2;  // Vector search only
}

// Message role
enum MessageRole {
  MESSAGE_ROLE_UNSPECIFIED = 0;
  MESSAGE_ROLE_USER = 1;
  MESSAGE_ROLE_ASSISTANT = 2;
  MESSAGE_ROLE_SYSTEM = 3;
}

// Chat session
message ChatSession {
  int32 id = 1;
  int32 user_id = 2;
  int32 assistant_id = 3;
  string title = 4;
  ChatMode mode = 5;
  int32 message_count = 6;
  google.protobuf.Timestamp creation_date = 7;
  google.protobuf.Timestamp last_update = 8;
  optional google.protobuf.Timestamp last_message_at = 9;
}

// Chat message
message ChatMessage {
  int64 id = 1;
  int32 chat_session_id = 2;
  MessageRole role = 3;
  string content = 4;
  int32 token_count = 5;
  optional int64 parent_message_id = 6;
  optional string rephrased_query = 7;
  optional google.protobuf.Struct retrieval_context = 8;
  optional google.protobuf.Struct tool_calls = 9;
  optional string error = 10;
  google.protobuf.Timestamp creation_date = 11;
}

// Source document referenced in a message
message MessageSource {
  int64 document_id = 1;
  string chunk_id = 2;
  double score = 3;
  optional string title = 4;
  optional string snippet = 5;
}

// Message feedback
message MessageFeedback {
  int32 id = 1;
  int64 chat_message_id = 2;
  int32 user_id = 3;
  bool is_positive = 4;
  optional string feedback_text = 5;
  google.protobuf.Timestamp creation_date = 6;
}

// Request to create a new chat session
message CreateChatSessionRequest {
  int32 assistant_id = 1;
  optional string title = 2;
  ChatMode mode = 3;
}

// Request to list chat sessions
message ListChatSessionsRequest {
  echomind.common.PaginationRequest pagination = 1;
  optional int32 assistant_id = 2;
}

message ListChatSessionsResponse {
  repeated ChatSession sessions = 1;
  echomind.common.PaginationResponse pagination = 2;
}

// Response for GET /chat/sessions/{id}
message GetChatSessionResponse {
  ChatSession session = 1;
  repeated ChatMessage messages = 2;  // Last N messages
}

// Request to list messages in a session
message ListMessagesRequest {
  int32 session_id = 1;
  echomind.common.PaginationRequest pagination = 2;
}

message ListMessagesResponse {
  repeated ChatMessage messages = 1;
  echomind.common.PaginationResponse pagination = 2;
}

// Response for GET /chat/messages/{id}
message GetMessageResponse {
  ChatMessage message = 1;
}

// Response for GET /chat/messages/{id}/sources
message GetMessageSourcesResponse {
  repeated MessageSource sources = 1;
}

// Request to submit feedback on a message
message SubmitFeedbackRequest {
  int64 message_id = 1;
  bool is_positive = 2;
  optional string feedback_text = 3;
}

message SubmitFeedbackResponse {
  MessageFeedback feedback = 1;
}

// ============================================================================
// WebSocket Messages
// ============================================================================

// Client -> Server: Start chat
message WsChatStart {
  int32 session_id = 1;
  string query = 2;
  ChatMode mode = 3;
}

// Client -> Server: Cancel generation
message WsChatCancel {
  int32 session_id = 1;
}

// Server -> Client: Retrieval started
message WsRetrievalStart {
  int32 session_id = 1;
  string query = 2;
  string rephrased_query = 3;
}

// Server -> Client: Retrieval complete
message WsRetrievalComplete {
  int32 session_id = 1;
  repeated MessageSource sources = 2;
}

// Server -> Client: Generation token (streaming)
message WsGenerationToken {
  int32 session_id = 1;
  string token = 2;
}

// Server -> Client: Generation complete
message WsGenerationComplete {
  int32 session_id = 1;
  int64 message_id = 2;
  int32 token_count = 3;
}

// Server -> Client: Error
message WsError {
  string code = 1;
  string message = 2;
}
